# OpenGuardian

./: .gitignore  README.md  old_writeup.md  project.jadx
ApkScan/: apkpure_download.py  keydb_scan.py  mass_decompile.py
CarelinkApi/: login.py
FridaScripts/: bypass_developer.js  hook_sake_internals.js  hook_sakekey_insertion.js  hook_teneoapi.js  minimed_keepalive.js  sake_decrypt.js  security_bypasses.js  startup.js
Guardianmon/: dump_printer.py  guardianmon_hook.js  handshake_process.txt
JadxProjects/: Guardian_134.jadx  Guardian™ Connect_3.5.0_APKPure.apk.jadx  README.md  mmm_250.apk.jadx  uploader.jar.jadx
Jadx_Projects/: Guardian_134.jadx  MiniMed_Mobile_220_original.apk.jadx  MiniMed™ Mobile_2.1.0_apkcombo.com.apk.jadx  mmm_250.apk.jadx
LogSniffer/: README.md  analyze_packets.py  com_matrix.py  decoded.txt  decryptor.py  extractor.py  gattlog_decryptor.py  pcap_to_gattlog.py
MinimedPatch/: .gitignore  MiniMed_Mobile_220_original.apk.jadx  README.md  classes.txt  hook_securityconfig.js  list_classes.js  okhttp_log.js  rebuild_reinstall.sh  stop_and_clean.sh  teneoapi_hook.js
NativeSakeRE/: Makefile  main.c  main.h  run.sh  start.py  update.sh
NativeSakeTests/: common.h  hook.c  hook.h  keydb.h  server.c  server.h  utils.h
OpenGuardian4/: .gitignore  USAGE.sh  settings.gradle  start_and_log.sh
PythonConnector/: handshake_client.py  pcap_converter.py  pump_connect_test.py  sake_crypto.py  transmitter.py
SakeRE/: common.py
Sake_RE/: common.py  debug_minimed.py  debug_sake.py  debug_sakeproxy.py  gdb_cheatsheet.txt  sigbreak.py  sigsearch.py  start_debug.sh  todo
Sakeproxy/: rebuild_install.sh  settings.gradle
SakeproxyClient/: SakeClient.py  platformio.ini
data/: 740g_advertising_packet.json  780g_pairing_with_mobile.pcapng  key1.txt  key3.txt  valid_keys.txt
docs/: basic_app_and_coms_info.md  basic_app_info.md  bluetooth.md  bt_monitor.md  charger_notes.md  data-protocol.md  device_models.md  jadx_notes.md  key_databases.md  sake.md  sake_re_guide.md  sake_re_notes.md
libsake/: hooksake.js  trace.json
parsing/: abstractconvert.py  dump_printer.py  gattpayload.py  guardianmon.js  process.py
python_connector/: handshake_client.py  helpers.py  main.py  (+1 more)
sake_experiments/: .gitignore  CMakeLists.txt  README.md  main.cpp
(+369 files in other folders)
